# neuraminds

./: .env.example  .gitignore  .render-workspace-lock.json  AGENTS.md  Anchor.toml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  deny.toml  docker-compose.yml  package-lock.json  package.json  render.yaml  tsconfig.json
.claude/commands/: audit.md  extract.md  init.md  status.md
.design-system/: VISUAL-IDENTITY.md
.githooks/: commit-msg  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  deploy-mainnet.yml  identity-firewall.yml  launch-readiness.yml  release.yml  rollback.yml  runner-smoke.yml  synthetic-monitoring.yml
app/: .env.example  Cargo.toml  Dockerfile
app/src/: main.rs
app/src/api/: auth.rs  compliance.rs  error.rs  evm.rs  external.rs  health.rs  jwt.rs  markets.rs  mod.rs  orders.rs  payments.rs  positions.rs  rate_limit.rs  solana.rs  user.rs  validation.rs  wallet.rs  web4.rs  ws.rs
app/src/config/: mod.rs
app/src/middleware/: access_log.rs  geo_block.rs  mod.rs  request_id.rs
app/src/models/: market.rs  mod.rs  order.rs  position.rs  trade.rs  user.rs
app/src/services/: database.rs  evm_indexer.rs  evm_rpc.rs  logging.rs  metrics.rs  mod.rs  orderbook.rs  provider_rails.rs  reconciliation.rs  redis.rs  solana.rs  websocket.rs  x402.rs  xmtp_swarm.rs
config/: open-core-closed-edge.json
config/deployments/: base-addresses.json
config/openclaw/: neuraminds-mcp.direct-http.json  neuraminds-mcp.stdio.json
config/pilot/: base-mainnet-markets.json
docker/: Dockerfile  docker-compose.yml
docs/: ALERT_ROUTING_MATRIX.md  API.md  BASE_MIGRATION_BOARD.md  BASE_NATIVE_TOKEN_LAUNCH_PLAN.md  BASE_PIVOT_PLAN.md  BATTLETEST_PLAN.md  CO_DEVELOPER_ONBOARDING.md  DEPLOYMENT_PLAN.md  DESIGN_SYSTEM.md  FRONTEND_PLAN.md  IMPLEMENTATION_PLAN.md  LAUNCH_COMMAND_CENTER.md  LAUNCH_ENV_CHECKLIST.md  LOAD_BASELINE.md  NEURAMINDS_OVERVIEW.md  OPEN_CORE_CLOSED_EDGE.md  OPEN_PERMISSIONLESS_WEB4_LAUNCH_CLOSURE_STATUS.md  PHASE1_CRYPTO_SPEC.md  PRODUCTION_AUDIT.md  PRODUCTION_LAUNCH_PLAN.md  PRODUCTION_LOOP_GATES.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_ROADMAP.md  RESEARCH_SUMMARY.md  SECURITY_ASSESSMENT.md  SYNTHETIC_MONITORING.md  TERMINAL_MARKETS_REUSE_NOTES.md  VISUAL_IDENTITY.md  WEB4_PIVOT_IMPLEMENTATION.md  openapi.yaml  production-audit-full-system.md  production-audit-launch.md
docs/backend/: 01-ARCHITECTURE.md  02-SOLANA-PROGRAMS.md  03-API-LAYER.md  04-ARCIUM-INTEGRATION.md  05-DEVELOPMENT-SETUP.md  06-DEPLOYMENT.md  PROGRESS.md  README.md
docs/integrations/: LIMITLESS_POLYMARKET_INTEGRATION_RUNBOOK.md  OPENCLAW_E2E_HANDOFF.md  openclaw-e2e-pack-production.json  openclaw-e2e-pack-production.md  openclaw-e2e-pack-staging.json  openclaw-e2e-pack-staging.md
docs/reports/: BASE_PLAN_EXECUTION_REPORT_2026-02-26.md  LAUNCH_OPS_EXECUTION_2026-02-28.md  (+42 more)
edge/: .gitignore  LICENSE  README.md
evm/: README.md  foundry.toml
infra/: DEPLOYMENT_SETUP.md
migrations/: 001_initial.sql  002_disputes_and_auth.sql  003_orderbook_persistence.sql  004_security_fixes.sql  005_wallet_transactions.sql  006_transactions_schema_normalization.sql  007_launch_closure_ops.sql  008_external_integrations.sql  009_paper_trading.sql
monitoring/: docker-compose.yml
programs/polyguard-orderbook/: Cargo.toml
programs/polyguard-orderbook/fuzz/: Cargo.toml  README.md
programs/polyguard-orderbook/fuzz/artifacts/orderbook_operations/: crash-54b54fe03805b658b8436ed044cbb6a0bba4cb7d
programs/polyguard-orderbook/fuzz/fuzz_targets/: arithmetic_safety.rs  fee_calculations.rs  market_resolution.rs  orderbook_operations.rs  price_matching.rs  redemption.rs  settlement.rs
programs/polyguard-orderbook/fuzz/src/: lib.rs
programs/polyguard-orderbook/src/: errors.rs  lib.rs
programs/polyguard-orderbook/src/instructions/: cancel_order.rs  consume_events.rs  defi.rs  enterprise.rs  initialize_config.rs  initialize_position.rs  mod.rs  place_order.rs  place_order_v2.rs  redeem.rs  resolve_market.rs  settle_trade.rs  social.rs  trading_agent.rs  update_keeper.rs
programs/polyguard-orderbook/src/state/: config.rs  defi.rs  enterprise.rs  event_heap.rs  mod.rs  open_orders.rs  oracle.rs  order.rs  orderbook.rs  position.rs  social.rs  trading_agent.rs
programs/polyguard-privacy/: Cargo.toml
programs/polyguard-privacy/src/: errors.rs  lib.rs
programs/polyguard-privacy/src/crypto/: elgamal.rs  errors.rs  mod.rs  pedersen.rs  proofs.rs
programs/polyguard-privacy/src/instructions/: create_private_account.rs  initialize_privacy_config.rs  mod.rs  place_private_order.rs  private_deposit.rs  private_settle.rs  private_withdraw.rs  update_mxe_authority.rs
programs/polyguard-privacy/src/state/: config.rs  mod.rs  private_account.rs  private_order.rs
scripts/: base-agent-executor.sh  base-auto-claimer.sh  base-deploy-programs.sh  base-distribute-funds.sh  base-global-payout-worker.sh  base-mainnet-smoke.sh  base-matcher-worker.sh  base-seed-pilot.sh  base-sepolia-smoke.mjs  base-sepolia-web-smoke.mjs  base-wallet-status.sh  create-test-market.ts  create-test-markets.ts  deploy-mainnet.sh  devnet-smoke-test.ts  dx-terminal-pro.sh  fuzz-campaign.sh  generate-launch-summary.mjs  generate-openclaw-pack.mjs  init-mainnet.sh  install-git-hooks.sh  launch-freeze-guard.mjs  launch-ops-execute.sh  launch-ops-freeze.mjs  launch-ops-monitor.mjs  launch-readiness.sh  load-baseline-report.mjs  mcp-server.mjs  openclaw-e2e-readiness.mjs  paper-cohort-lib.mjs  paper-cohort-report.mjs  paper-cohort-run.mjs  paper-cohort-start.mjs  paper-cohort-tick.mjs  preflight-check.sh  production-loop-report.mjs  push-safe.sh  security-stress-test.sh  solana-program-smoke.mjs  synthetic-monitor.mjs  (+9 more)
tests/: polyguard.ts  security.ts
web/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
(+233 files in other folders)
