[workspace]
members = [
    "app"
]
resolver = "2"

# Force older blake3 version that uses constant_time_eq 0.3.x (compatible with platform-tools)
[workspace.dependencies]
blake3 = "=1.5.5"
constant_time_eq = "=0.3.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
