[package]
name = "polyguard-backend"
version = "0.1.0"
edition = "2021"
description = "Polyguard Backend API - Order matching, settlement, and real-time updates"

[[bin]]
name = "polyguard-api"
path = "src/main.rs"

[dependencies]
# Web framework
actix = "0.13"
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
actix-web-actors = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Solana
solana-sdk = "2.2"
solana-client = "2.2"
anchor-client = "0.31"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
thiserror = "1"
anyhow = "1"
base64 = "0.21"
bs58 = "0.5"
regex = "1"
bincode = "1.3"

# Security - Rate limiting
actix-governor = "0.5"
lazy_static = "1.4"
rand = "0.8"

# JWT for session tokens
jsonwebtoken = "9"

# WebSocket
tokio-tungstenite = "0.21"

[dev-dependencies]
actix-rt = "2"
