[package]
name = "neuraminds-backend"
version = "0.1.0"
edition = "2021"
description = "Neuraminds Backend API - Order matching, settlement, and real-time updates"

[[bin]]
name = "neuraminds-api"
path = "src/main.rs"

[dependencies]
# Web framework
actix = "0.13"
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
actix-web-actors = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
serde_derive = "1"
thiserror = "1"
anyhow = "1"
base64 = "0.21"
bs58 = "0.5"
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
http = "1"

# Security - Rate limiting
actix-governor = "0.5"
lazy_static = "1.4"
rand = "0.8"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
aes-gcm = "0.10"

# JWT for session tokens
jsonwebtoken = "10"
siwe = "0.6.1"
time = "0.3"

# WebSocket
tokio-tungstenite = "0.21"

[dev-dependencies]
actix-rt = "2"
actix-web = { version = "4", features = ["macros"] }
actix-http = "3"
mockall = "0.12"
tempfile = "3"
serial_test = "3"
