[package]
name = "polyguard-orderbook"
version = "0.1.0"
description = "Polyguard OrderBook - Order placement, matching, and settlement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "polyguard_orderbook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["lean"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

# Deployment profiles
lean = []                                           # Core trading only (~200 KB)
full = ["agents", "social", "enterprise", "defi", "events"]

# Optional modules (enable individually or via "full")
agents = []                                         # AI trading agents
social = []                                         # Copy trading, profiles
enterprise = []                                     # Multi-tenant PaaS
defi = []                                           # Yield vaults, margin
events = []                                         # Event queue batching

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
blake3 = { workspace = true }
constant_time_eq = { workspace = true }
bytemuck = { version = "1.14", features = ["derive"] }
