[package]
name = "polyguard-orderbook-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
arbitrary = { version = "1.3", features = ["derive"] }
libfuzzer-sys = "0.4"
solana-program = "2.1"
solana-sdk = "2.1"
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
rand = "0.8"

[lib]
path = "src/lib.rs"

# [dependencies.polyguard-orderbook]
# path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "orderbook_operations"
path = "fuzz_targets/orderbook_operations.rs"
test = false
doc = false

[[bin]]
name = "price_matching"
path = "fuzz_targets/price_matching.rs"
test = false
doc = false

[[bin]]
name = "arithmetic_safety"
path = "fuzz_targets/arithmetic_safety.rs"
test = false
doc = false

[[bin]]
name = "settlement"
path = "fuzz_targets/settlement.rs"
test = false
doc = false

[[bin]]
name = "redemption"
path = "fuzz_targets/redemption.rs"
test = false
doc = false

[[bin]]
name = "market_resolution"
path = "fuzz_targets/market_resolution.rs"
test = false
doc = false

[[bin]]
name = "fee_calculations"
path = "fuzz_targets/fee_calculations.rs"
test = false
doc = false
